[tool.poetry]
name = "cartpole"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
stable-baselines3 = {extras = ["extra"], version = "^1.6.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cartpole-train = "cartpole.main:train"
cartpole-train2 = "cartpole.main:train2"
cartpole-train3 = "cartpole.main:train3"
cartpole-eval = "cartpole.main:eval"
cartpole-test = "cartpole.main:test"
